# AXION

./: Readme.txt  convobot.cpp  convobot_b.cpp
Chatbot/: CMakeLists.txt
Chatbot/data/: chat_logs.txt  chatbot_data.txt
Chatbot/docs/: DESIGN.md
Chatbot/include/: Utils.hpp
Chatbot/include/database/: Database.hpp
Chatbot/include/database/Models/: ChatLog.hpp  Lemma.hpp  Model.hpp  StopWord.hpp  WordVectorMap.hpp
Chatbot/include/database/Queries/: ChatLogQueries.hpp  LemmaQueries.hpp  StopWordQueries.hpp  WordToVectorMapQueries.hpp
Chatbot/include/database/Repositories/: ChatLogRepository.hpp  LemmaRepository.hpp  Repository.hpp  StopWordRepository.hpp  WordVectorMapRepository.hpp
Chatbot/include/user_input/: InputProcessor.hpp  Lemmatizer.hpp  StopwordRemover.hpp  Tokenizer.hpp
Chatbot/src/: Utils.cpp  main.cpp
Chatbot/src/database/: Database.cpp
Chatbot/src/database/Repositories/: ChatLogRepository.cpp  LemmaRepository.cpp  StopWordRepository.cpp  WordVectorMapRepository.cpp
Chatbot/src/user_input/: InputProcessor.cpp  Lemmatizer.cpp  StopwordRemover.cpp  Tokenizer.cpp
Chatbot/tests/: test_chat_log_repository.cpp  test_chatlog.cpp  test_stopword.cpp  test_stopword_repository.cpp  test_word_vector_map_repository.cpp  test_wordvector.cpp
Chatbot/tests/database/: test_database_connection.cpp  test_lemma.cpp  test_stopword.cpp
